--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="main-component">
+        <div class="img">
+          <img src="/images/image-product-desktop.jpg" alt="Img" />
+        </div>
+        <div class="product-info">
+          <h2 class="category">Perfume</h2>
+          <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+          <p class="description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL
+          </p>
+          <div class="price">
+            <span class="sale-price">$149.99</span>
+            <span class="current-price">$169.99</span>
+          </div>
+          <a class="btn" href="#">
+            <img src="./images/icon-cart.svg" class="cart" alt="cart icon" />
+            <span>Add to cart</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
