Adding sass to our project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -20,14 +20,14 @@
           <img src="/images/image-product-desktop.jpg" alt="Img" />
         </div>
         <div class="product-info">
-          <h2 class="category">Perfume</h2>
-          <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
-          <p class="description">
+          <h2 class="product-info__category">Perfume</h2>
+          <h1 class="product-info__title">Gabrielle Essence Eau De Parfum</h1>
+          <p class="product-info__description">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL
           </p>
           <div class="price">
-            <span class="sale-price">$149.99</span>
+            <span class="price--sale">$149.99</span>
             <span class="current-price">$169.99</span>
           </div>
           <a class="btn" href="#">
