--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/dist/style.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <div class="main-component">
         <div class="img">
-          <img src="/images/image-product-desktop.jpg" alt="Img" />
+          <img src="/app/images/image-product-desktop.jpg" alt="Img" />
         </div>
         <div class="product-info">
           <h2 class="category">Perfume</h2>
@@ -31,7 +31,7 @@
             <span class="current-price">$169.99</span>
           </div>
           <a class="btn" href="#">
-            <img src="./images/icon-cart.svg" class="cart" alt="cart icon" />
+            <img src="/app/images/icon-cart.svg" class="cart" alt="cart icon" />
             <span>Add to cart</span>
           </a>
         </div>
